[tool.poetry]
name = "pytiling"
version = "0.1.0"
description = ""
authors = ["Dante Ferreira"]
packages = [{ include = "pytiling" }]

[tool.poetry.dependencies]
python = ">=3.13"
pymunk = "*"
numpy = "*"
pyglet = "*"
pillow = "*"
blinker = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
